# POD-System

./: .dockerignore  .env.bak.1755111964  .env.bak.1755115320  .env.example  .gitignore  2.7  AI_AGENT_README.md  BACKEND_AGENT_TASK.md  DEPLOYMENT_ERROR_LOG.md  GOOGLE_CLOUD_AUDIT_GUIDE.md  GOOGLE_MCP_SETUP.md  MONITORING_SETUP.md  ORCHESTRATOR_README.md  PHASE1_README.md  PRINTIFY_API_SOLUTION.md  PRINTIFY_SETUP.md  README.md  create_product_example.py  deploy-ceo-only.sh  firestore_indexes.json  fix_blueprint_variants.py  fix_printify_integration.py  pyproject.toml  requirements-ai.txt  requirements.txt  run_phase1.py  start_orchestrator.py  system_validation_report.json  test_orchestrator.py  test_printify.py  test_system_validation.py
assets/: test_design.txt
config/: agent_prompts.yaml  development.yaml  production.yaml
deployment/: ai_agent.env  ai_agent.env.example  deploy-ai-agent.sh  deploy-production.sh  setup-cloud-env.sh  setup-env.sh
deployment/cloud_run/: agent-services.yaml  ceo-service.yaml  cloudbuild.ceo.yaml  cloudbuild.simple.yaml  cloudbuild.yaml  production.env  secrets.yaml
deployment/docker/: Dockerfile.agents  Dockerfile.ai  Dockerfile.ceo  docker-compose.yml  nginx.conf
deployment/terraform/: main.tf  (+2 more)
docs/: AB_TESTING_FRAMEWORK.md
examples/: marketing_ab_testing_demo.py
helios/: __main__.py  cli.py  config.py  main.py  mcp_client.py  mcp_stub.py  orchestrator_api.py  utils.py  utils_google.py
mcp/: Dockerfile  README.md  docker-compose.yml  env.example  requirements.txt  server.py  start.sh  test_client.py
tests/: smoke.py
(+78 files in other folders)
