[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helios"
version = "0.1.0"
description = "Helios Autonomous Store – Priority-driven AI workflow with MCP integration"
authors = [{ name = "Helios" }]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "typer[all]>=0.12",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "tenacity>=8.2",
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "orjson>=3.10",
  "aiofiles>=23.2",
  "asyncer>=0.0.5",
  "anyio>=4.4",
  "backoff>=2.2",
  "cachetools>=5.3",
  "google-api-python-client>=2.142",
  "google-auth>=2.30",
  "google-auth-httplib2>=0.2",
  "google-auth-oauthlib>=1.2",
  "pandas-stubs>=2.2.2.240807",
  "loguru>=0.7",
]

[project.optional-dependencies]
extras = [
  "openai>=1.35",
  "google-generativeai>=0.7",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["helios"]
